add download image interface
